--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>SMART COVID Navigator</title>
-  <base href="/">
+  <base href="https://smart-covid-navigator.github.io/Covid-Application">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="favicon.png">
