solved issue: cord-19 data not appearing in Try It Out

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>SMART COVID Navigator</title>
-  <base href="https://smart-covid-navigator.github.io/Covid-Application">
-
+  <!-- <base href="https://smart-covid-navigator.github.io/Covid-Application"> -->
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="favicon.png">
 
